--- a/_posts/2024-06-02-ck.md
+++ b/_posts/2024-06-02-ck.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 4'
-date: 2015-08-14
-permalink: /posts/2012/08/blog-post-4/
+title: 'Camp Kesem 2023'
+date: 2024-06-02
+permalink: /posts/2024/06/ck/
 tags:
   - cool posts
   - category1
