Update tags, old blogs

--- a/_posts/2024-06-23-old-new.md
+++ b/_posts/2024-06-23-old-new.md
@@ -1,7 +1,7 @@
 ---
 title: "Out With the Old, In With the New"
 date: 2024-06-23
-permalink: /posts/2024/06/run/
+permalink: /posts/2024/06/old-new/
 tags:
   - decision-making
 ---
